respond to critiques from David Van Valen, Kate Lawrenson, Simon Knott (excluding survival section)

--- a/code/figure2v2.Rmd
+++ b/code/figure2v2.Rmd
@@ -256,6 +256,6 @@ with(umap_cancertype, scatter3D(plot_y, -plot_z, plot_x,
 title(xlab="UMAP 2", line=0)
 mtext("F", side=3, line=-2.05, cex=1.2, adj=0)
 
-plot.new()
+#plot.new()
 ```
 
