--- a/text/discussion.Rmd
+++ b/text/discussion.Rmd
@@ -13,19 +13,19 @@ simplify the problem by employing a "knowledge-base driven analysis"
 [@pathways-Atul-Butte], investigating cancer as a disease of basic cellular and
 biochemical pathways, which we accomplished by translating gene-level mutations
 into pathway level disruptions. Our approach differs from previously described
-methods [@PATHNET] in that we chose to focus on the pathway as the unit of
-disruption instead of the gene, employing the conceit that individual mutations
-may be sufficient to disrupt or misdirect pathway activity (as is often the case
-with driver mutations). Rather than evaluating the burden of mutations on each
-pathway within or across tumors, which can be biased by the number of genes or
-the coverage of pathway-linked genes in the genome, we scored each pathway in
-binary fashion, allowing one mutation or multiple mutations to count equally for
-each sample.
+methods [@PATHNET] in that we chose to focus on the pathway (defined in the
+methods) as the unit of disruption instead of the gene, employing the conceit
+that individual mutations may be sufficient to disrupt or misdirect pathway
+activity (as is often the case with driver mutations). Rather than evaluating
+the burden of mutations on each pathway within or across tumors, which can be
+biased by the number of genes or the coverage of pathway-linked genes in the
+genome, we scored each pathway in binary fashion, allowing one mutation or
+multiple mutations to count equally for each sample.
 
 To our knowledge, this approach has not previously been attempted in the
 literature in spite of its relative simplicity. We limited our analysis to
 mutations with likely deleterious effects, including missense, nonsense,
-frame-shift, stop-gain, untranslated region and splice site mutations in genes
+frame-shift, stop-loss, untranslated region and splice site mutations in genes
 that are actively expressed in each cancer type, thus avoiding bias from
 transcription coupled repair. Our method of filtration differs from the
 "rank-and-cut" method of [@PCAWG-MAIN] but represents a reasonable attempt to
@@ -46,19 +46,19 @@ networks have yielded important new insights into this problem and new genes
 traditional analysis, supporting the case that pathway-centric approaches have
 the potential to increase statistical power.
 
-The hypothesis that cancer is the result of dysfunction from
-a limited number of basic cellular processes common to all living human cells
-was first introduced and later expanded on in a pair of classic essays by
-Hanahan and Weinberg [@weinberg2000; @hallmarks_II]. In this view, all tumors
-regardless of tissue of origin acquire six essential phenotypes; sustaining
-proliferative signaling, evading growth suppressors, replicative immortality,
-evading apoptosis, supportive angiogenesis, tissue invasion and metastasis
-[@weinberg2000]. Advancements in the field over the ensuing decade led to the
-inclusion of new tumor promoting processes, namely deregulation of cellular
-energy cycle, tumor promoting inflammation, evasion of the immune system, genome
-instability, and on top of these acquired traits a new appreciation for the
-concept of the tumor microenvironment and its contribution to the evolution and
-promotion of metastatic disease [@hallmarks_II]. 
+The hypothesis that cancer is the result of dysfunction from a limited number of
+basic cellular processes common to all living human cells was first introduced
+and later expanded on in a pair of classic essays by Hanahan and Weinberg
+[@weinberg2000; @hallmarks_II]. In this view, all tumors regardless of tissue of
+origin acquire six essential phenotypes; sustaining proliferative signaling,
+evading growth suppressors, replicative immortality, evading apoptosis,
+supportive angiogenesis, tissue invasion and metastasis [@weinberg2000].
+Advancements in the field over the ensuing decade led to the inclusion of new
+tumor promoting processes, namely deregulation of cellular energy cycle, tumor
+promoting inflammation, evasion of the immune system, genome instability, and on
+top of these acquired traits a new appreciation for the concept of the tumor
+microenvironment and its contribution to the evolution and promotion of
+metastatic disease [@hallmarks_II].
 
 An alternative hypothesis is that every tumor belongs to one of a large number
 of syndromes which are unique to each tissue-of-origin, that share some
@@ -71,14 +71,14 @@ tissue-of-origin remains the most important driver of tumor characteristics at
 every scale and by every measure. Our observations contrast with this view, and
 instead support an interpretation of publicly available data in which all tumors
 manifest one of a limited number of metastable phenotypes resulting from
-disruptions in basic pathways as represented by our classes (**figures 1 & 2**). 
+disruptions in basic pathways as represented by our clusters (**figures 1 & 2**). 
 
 We attempted to account for our clusters in terms of more trivial explanations.
-For example, it could be that the classes we identified are consistent with a
-signature of overall disease progression, such that successive, adjacent classes
-on the UMAP projection exhibit increasing specificity. We identified no such
-trend in the number of mutations (see **figure 4**), the relative staging
-(**figure 3D**) or metastasis (**figure 3E**); and each class instead was
+For example, it could be that the clusters we identified are consistent with a
+signature of overall disease progression, such that successive, adjacent
+clusters on the UMAP projection exhibit increasing specificity. We identified no
+such trend in the number of mutations (see **figure 4**), the relative staging
+(**figure 3D**) or metastasis (**figure 3E**); and each cluster instead was
 associated with unique combinations of pathways (as in **figures 5B, C**).
 
 We find that most tumors segregate into one of ten biologically distinct
@@ -86,8 +86,8 @@ clusters, regardless of the cancer type (**figure 2F, 3A** and **supplementary
 figure S1**). Some cancer types ( _e.g._ Pancreatic:PAAD in the RAS mutant
 cluster 8, and Kidney Chromophobe:KICH in cluster 1, see **supplementary figure
 S1**) are unevenly distributed, though we could not identify any cancers that
-were exclusive to a single tumor class. Only cancer types with the fewest
-samples were found to be absent from one or more classes at all. Somewhat
+were exclusive to a single tumor cluster. Only cancer types with the fewest
+samples were found to be absent from one or more clusters at all. Somewhat
 surprisingly to us, this finding extends to histological subtypes of breast,
 head and neck cancers, leukemias, _etc._ (see **Figure 3B** and **Supplemental
 Figure S2**). This result implies that many, if not most, histological subtypes
@@ -101,20 +101,20 @@ phenotypes [@breast-subtypes;
 @breast-subtypes3]. Consistent with this view we found that breast tumor samples
 of the Luminal A subtype were heavily biased toward membership in clusters 1 and
 7, and basal tumor samples were biased toward cluster 6 (**figure 3B**).
-However, both subtypes also contained samples in every other class (without
+However, both subtypes also contained samples in every other cluster (without
 exception), and Luminal B and Her2 positive samples are distributed across
 clusters. We interpret these data to mean that inherited cell-of-origin
 molecular profiles may predispose certain precursor cell types within the breast
-epithelium to forming tumors of one class or another but are not determinative;
-this view is compatible with the previously stated hypothesis but opens the way
-for a more granular view of individual tumors. It would be surprising if we did
-not observe bias for some cancers and subtypes amongst our classes, since some
-treatment regimens have greater efficacy for patients of a given cancer or
-histological subtype [@breast-subtypes2]. Nonetheless, the basis for some tumors
-being treatment-refractory in spite of receiving the standard of clinical care
-for diagnostic markers remains elusive. Doubtless some of this is due to bad
-luck, as tumors can metastasize and remain dormant years before they are
-detected at distal sites, or resistant clones may have already arisen at
+epithelium to forming tumors of one cluster or another but are not
+determinative; this view is compatible with the previously stated hypothesis but
+opens the way for a more granular view of individual tumors. It would be
+surprising if we did not observe bias for some cancers and subtypes amongst our
+classes, since some treatment regimens have greater efficacy for patients of a
+given cancer or histological subtype [@breast-subtypes2]. Nonetheless, the basis
+for some tumors being treatment-refractory in spite of receiving the standard of
+clinical care for diagnostic markers remains elusive. Doubtless some of this is
+due to bad luck, as tumors can metastasize and remain dormant years before they
+are detected at distal sites, or resistant clones may have already arisen at
 undetectable levels [@hallmarks_II], but our analysis suggests the possibility
 of identifying more informative molecular, histological or cellular subtypes
 that could form a basis for future separation of patients into different
@@ -147,23 +147,24 @@ biology.
 ### Incompleteness of the pathway disruption data 
 
 Finally, we must remark on the limitations of our work exemplified in two of the
-classes, 1 and 10, for which we did not find many distinctive associations with
-pathways (**figure 5B, C**). Class 1 had a relatively low proportion of mutated
-pathways across the board, although it is broadly enriched in many of the same
-tumor-promoting pathways common to the other groups. This likely does not
-reflect a true difference in stages of tumor evolution, as our data show clearly
-that this class is as likely to contain stage IV metastatic tumors as it is to
-contain those of stage I (**figure 3D, E**). This class likely represents a
-group of tumors with aberrations in methylation, copy number alterations,
-structural variants, or combinations thereof which we excluded from our
-analysis. Consistent with this, kidney chromophobe and thyroid cancers have high
-proportions of structural variations _vs._ other variant types [@PCAWG-MAIN] and
-are heavily skewed to cluster 1 membership (**Supplementary figure S1**).
-Likewise, Class 10 represents a group of hyper-mutated tumors that harbor so
-many mutations that virtually no pathway is unaffected. It seems likely that a
-significant fraction of the “mutant” samples for each pathway are burdened with
-excess passenger mutations. This could be addressed with application of
-ever-increasingly sophisticated filtering of likely passenger mutations [ _e.g._
+clusters, 1 and 10, for which we did not find many distinctive associations with
+pathways (**figure 5B, C**). Cluster 1 had a relatively low proportion of
+mutated pathways across the board, although it is broadly enriched in many of
+the same tumor-promoting pathways common to the other groups. This likely does
+not reflect a true difference in stages of tumor evolution, as our data show
+clearly that this cluster is as likely to contain stage IV metastatic tumors as
+it is to contain those of stage I (**figure 3D, E**). This cluster likely
+represents a group of tumors with aberrations in methylation, copy number
+alterations, structural variants, or combinations thereof which we excluded from
+our analysis. Consistent with this, kidney chromophobe and thyroid cancers have
+high proportions of structural variations _vs._ other variant types
+[@PCAWG-MAIN] and are heavily skewed to cluster 1 membership (**Supplementary
+figure S1**). Likewise, cluster 10 represents a group of hyper-mutated tumors
+that harbor so many mutations that virtually no pathway is unaffected. It seems
+likely that a significant fraction of the “mutant” samples for each pathway are
+burdened with excess passenger mutations. This could be addressed with
+application of ever-increasingly sophisticated filtering of likely passenger
+mutations [ _e.g._
 @spliceAI; @deep-learning-clinical-variants]. In the future, we hope to
 incorporate these other data into a comprehensive pathway-centric analysis as we
 have done here for point mutations and indels.
@@ -171,36 +172,36 @@ have done here for point mutations and indels.
 ### Estimates of survival reveal pathway-dependent differences 
 
 By modeling CDC longevity data as a baseline risk function we showed that each
-of our pathway disruption classes exhibit cancer-type specific effects on
+of our pathway disruption clusters exhibit cancer-type specific effects on
 expected survival (**figure 9**). Contrary to what one might expect at the
-outset, we found that models assuming different survival based on class and
+outset, we found that models assuming different survival based on cluster and
 cancer type fit better than models in which they are independent factors.
 However, considering that within each cancer type there are different clinical
 standards of care, and even within classes of drugs the preferred treatment can
-very between cancers, it makes sense that we observe tissue-specific class
+very between cancers, it makes sense that we observe tissue-specific cluster
 effects. Contrast the situation with ovarian _vs._ breast cancer, which are both
 hormonally driven cancers, for example. Ovarian cancer has but one main
 treatment axis, platinum, whereas breast cancer patients have a variety of
 treatment regimens based on molecular subtype and other factors. It is easy to
-see how standard of care for one cancer and class could produce different
-outcomes than the same class of a different cancer type. Unfortunately, given
+see how standard of care for one cancer and cluster could produce different
+outcomes than the same cluster of a different cancer type. Unfortunately, given
 the diversity of drug classes and treatments (including non-chemical treatments
 such as surgery and palliative care), we lack sufficient power to explore these
 variables in the TCGA data. It is our hope that future studies will help to
 distinguish between treatment-specific effects on survival given different
-pathway disruption classes.
+pathway disruption clusters.
 
 ### Implications for the evolution of cancer 
 
 Our findings imply that there are separate processes in the etiology of cancer
-that can be broadly thought of as general cancer promoting, class-specific
+that can be broadly thought of as general cancer promoting, cluster-specific
 mutations and metastasis. General cancer promoting processes must include
 factors that relate to genome stability and immortality, as "enabling
 characteristics" of the cancer phenotype [@hallmarks_II]. Such pathways are
-disrupted in all or most of the defined classes (**supplementary figure S1**)
+disrupted in all or most of the defined clusters (**supplementary figure S1**)
 and are frequently the result of aberrations involving common driver genes such
 as BRCA1/2, MMR genes, mitotic checkpoints, Cohesion complexes, _etc._
-(**supplementary figure S3** and **supplemental file 1**). Class-specific
+(**supplementary figure S3** and **supplemental file 1**). Cluster-specific
 evolution must involve the acquisition of disruptions to pathways that may
 individually be harmful ( _e.g._ highly proliferative cells are more likely to
 senesce) but together produce more specialized cancer phenotype and increased
@@ -211,8 +212,8 @@ evolutionary analysis of clonality, drawing inferences from variant allele
 frequencies as in @PCAWG-EVO. However, since many of the genes in the
 non-cluster-specific pathways involve the known driver genes, it is reasonable
 to hypothesize that these mutations promote or enable the subsequent acquisition
-of class-specific defects via random mutation and natural selection, thus
-producing the classes we observed. In support of this, the pan-cancer analysis
+of cluster-specific defects via random mutation and natural selection, thus
+producing the clusters we observed. In support of this, the pan-cancer analysis
 of whole genomes consortium (PCAWG) found that oncogenic driver mutations are
 highly enriched in early arising clones, whereas later arising clones have much
 greater diversity in driver mutations [@PCAWG-EVO]. Moreover, driver genes that
@@ -229,21 +230,21 @@ the context of single cell experiments.
 
 ### On metastasis as a convergence of phenotypes 
 
-We report that pathway enrichment in metastatic tumors across all classes
+We report that pathway enrichment in metastatic tumors across all clusters
 (pooled) yielded generally lower effect sizes and larger p-values than the
 cluster specific analysis, suggesting that signal is diluted when the samples
 are analyzed together, and supporting the view that, within the parameters of
-our analysis, metastasis has class-specific requirements. Since the number of
+our analysis, metastasis has cluster-specific requirements. Since the number of
 metastatic samples is relatively low this part of our analysis is likely
 underpowered and subject to expanded analysis with larger cohorts. Nonetheless,
-the class-specific metastatic pathway enrichment we observe (in **table 1**)
+the cluster-specific metastatic pathway enrichment we observe (in **table 1**)
 could be a result of the pathways directly promoting metastatic phenotypes in
-these classes, or because they acquire a stronger or more complete oncogenic
+these clusters, or because they acquire a stronger or more complete oncogenic
 phenotype, as we don’t know the order in which they were acquired. The fact that
 most metastatic enrichment is cluster-specific and has a tendency to overlap
 with cluster-specific pathways from non-metastatic tumors of neighboring
 clusters favors the latter interpretation, and suggests a mechanism of
-complementarity, in which newly acquired mutations result in similar classes
+complementarity, in which newly acquired mutations result in similar clusters
 converging on one or more deadly phenotypes that capture most of the critical
 features of end-stage cancer. One explanation for this could be that tumors must
 accumulate mutations in a certain order or face elimination due to any of the
@@ -260,7 +261,7 @@ also marked by a decidedly different set of pathways in metastasis. Clusters 3
 and 5 notably have (in addition to signaling pathways) mutations in glucagon and
 glycogen metabolism, respectively, in their metastases (**table 1**), consistent
 with energy metabolism as one of the new hallmarks [@hallmarks_II], but also
-distinguishing these classes from the others in the order or nature of hallmark
+distinguishing these clusters from the others in the order or nature of hallmark
 acquisition. Thus, even at relatively low power, our analysis of metastasis
 further supports the pathway-centric approach as a fruitful way to uncover real
 differences in underlying biology. As a major caveat to this, we acknowledge
