--- a/text/references.bib
+++ b/text/references.bib
@@ -613,9 +613,32 @@ Nulsen, J. and Perner, J. and Cereda, M. and Lagergren, J. and Howell, M. and Ya
 Fitzgerald, R.C. and Scaffidi, P. and The Oesophageal Cancer Clinical and Molecular Stratification (OCCAMS) Consortium and Ciccarelli, F.D.},
   title = {Patient-specific cancer genes contribute to recurrently perturbed pathways and establish therapeutic vulnerabilities in esophageal adenocarcinoma},
   journal = {Nature Communications},
+  year = {2019},
   volume = {10},
   number = {1},
   pages = {e3101},
   pmid = {31308377},
   doi = {10.1038/s41467-019-10898-3}
+}
+
+@article{Iranzo-Network,
+  author ={Iranzo, J. and Martincorena, I. and Koonin, E.V.},
+  title = {Cancer-mutation network and the number and specificity of driver mutations},
+  journal = {PNAS},
+  year = {2018},
+  volume = {115},
+  number = {26},
+  pages = {E6010--E6019},
+  doi = {10.1073/pnas.1803155115}
+}
+
+@article{mutations-healthy-tissues,
+  author = {Martincorena, I.},
+  title = {Somatic mutation and clonal expansions in human tissues},
+  journal = {Genome Medicine},
+  year = {2019},
+  volume = {11},
+  number = {35},
+  pmid = {31138277},
+  doi = {10.1186/s13073-019-0648-4}
 }
